K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fenrir
  labels:
    app: fenrir-app-deployment
spec:
  selector:
    matchLabels:
      app: fenrir
  replicas: 3
  template:
    metadata:
      labels:
        app: fenrir
    spec:
      containers:
      - name: fenrir-main
        image: docker.io/sahiljhaaa/fenrir:latest
        ports:
        - containerPort: 8000
