K8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fenrir-backend
  namespace: fenrir
spec:
  selector:
    matchLabels:
      app: fenrir-backend
  template:
    metadata:
      labels:
        app: fenrir-backend
    spec:
      containers:
      - name: fenrir-backend
        image: docker.io/sahiljhaaa/fenrir-backend
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fenrir-backend
  namespace: fenrir
spec:
  selector:
    app: fenrir-backend
  ports:
  - port: 80
    targetPort: 8000
