K8s/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: fenrir
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 2
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: docker.io/mongo-express
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: fenrir
spec:
  selector:
    app: mongo-express
  ports:
  - port: 80
    targetPort: 8081
